# touchlogger-android-client

./: .gitignore  README.md  gradle.properties
app/: .gitignore  CMakeLists.txt  build.gradle  functions.cmake
app/src/androidTest/java/org/leyfer/thesis/touchlogger_dirty/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/armeabi/: run-as
app/src/main/assets/armeabi-v7a/: run-as
app/src/main/assets/x86/: run-as
app/src/main/assets/x86_64/: run-as
app/src/main/cpp/: BaseControlReader.cpp  BaseControlReader.h  ControlReader.cpp  ControlReader.h  TCPControlReader.cpp  TCPControlReader.h  dirty_copy.c  dirty_copy.h  elf_parser.c  elf_parser.h  exec_payload.c  exec_payload.cpp  file_utils.c  file_utils.h  native-lib.cpp  payload.c  run-as.c  shared_payload.c  test_input.c
app/src/main/cpp/common/: api_method.h  common.h  constants.h  logging.c  logging.h
app/src/main/cpp/dirty/: main.c
app/src/main/cpp/dirty/common/: common.c  common.h  logging.h
app/src/main/cpp/dirty/file_utils/: dirty_copy.c  dirty_copy.h  file_utils.c  file_utils.h
app/src/main/cpp/dirty/lib_utils/: elf_parser.c  elf_parser.h  inject.c  inject.h
app/src/main/cpp/input_device/: EventFileWriter.cpp  EventFileWriter.h  InputDeviceUtils.cpp  InputDeviceUtils.h  InputReader.cpp  InputReader.h  MotionFileWriter.cpp  MotionFileWriter.h  Pausable.h  TestEventFileWriter.cpp  TestEventFileWriter.h  common.h  input_device_utils.cpp  runner.cpp
app/src/main/cpp/input_device/accumulators/: MultiTouchMotionAccumulator.cpp  MultiTouchMotionAccumulator.h  SingleTouchMotionAccumulator.cpp  SingleTouchMotionAccumulator.h
app/src/main/cpp/input_device/mappers/: MultitouchInputMapper.cpp  MultitouchInputMapper.h  TouchInputMapper.cpp  TouchInputMapper.h
app/src/main/cpp/input_device/utils/: BitSet.h  CookedPointData.cpp  CookedPointData.h  CookedState.h  InputDevice.cpp  InputDevice.h  PointerCoords.cpp  PointerCoords.h  PointerProperties.h  RawAbsoluteAxisInfo.h  RawPointerAxes.cpp  RawPointerAxes.h  RawPointerData.cpp  RawPointerData.h  RawState.h  Utils.cpp  Utils.h
app/src/main/cpp/libdirty/: dirty_copy.c  dirty_copy.h  dirty_inject.c  dirty_inject.h  elf_breaker.c  elf_breaker.h  main.c
app/src/main/cpp/libdirty/common/: common.c  common.h
app/src/main/cpp/utils/: Reanimator.cpp  Reanimator.h  exec_utils.c  exec_utils.h  net_utils.c  net_utils.h  payload_utils.c  payload_utils.h  su_utils.c  su_utils.h
app/src/main/java/org/leyfer/thesis/touchlogger_dirty/: InputDataReader.java  MainApplication.java
app/src/main/java/org/leyfer/thesis/touchlogger_dirty/activation/: PayloadActivator.java
app/src/main/java/org/leyfer/thesis/touchlogger_dirty/activity/: MainActivity.java
app/src/main/java/org/leyfer/thesis/touchlogger_dirty/adapter/: PayloadViewAdapter.java
app/src/main/java/org/leyfer/thesis/touchlogger_dirty/dialog/: ErrorAlertDialog.java  RestartZygoteAlertDialog.java  RestartingDialog.java
app/src/main/java/org/leyfer/thesis/touchlogger_dirty/event/: Event.java  NewMatchingFileEvent.java  PauseEvent.java  StatusEvent.java  TouchCoordinatesEvent.java
app/src/main/java/org/leyfer/thesis/touchlogger_dirty/exception/: EncryptAESException.java  EncryptRSAException.java  FileIsNotDirectoryException.java  GenerateKeyException.java  InvalidTouchEventDataException.java  ManualInstallationException.java  PublicKeyException.java
app/src/main/java/org/leyfer/thesis/touchlogger_dirty/handler/: InjectProgressHandler.java
app/src/main/java/org/leyfer/thesis/touchlogger_dirty/job/: UploadJob.java  UploadJobCreator.java
app/src/main/java/org/leyfer/thesis/touchlogger_dirty/notification/: ControlNotification.java
app/src/main/java/org/leyfer/thesis/touchlogger_dirty/pojo/: Event.java  Gesture.java  GestureReport.java  Gestures.java  HeartBeat.java  Pointer.java  TouchEvent.java  Window.java
app/src/main/java/org/leyfer/thesis/touchlogger_dirty/pojo/wrapper/: Fillable.java
app/src/main/java/org/leyfer/thesis/touchlogger_dirty/receiver/: BootReceiver.java  PayloadHeartBeatReceiver.java
app/src/main/java/org/leyfer/thesis/touchlogger_dirty/service/: CommandsExecutionService.java  FloatingIndicationService.java  GestureBuilderService.java  PayloadWaitingService.java
app/src/main/java/org/leyfer/thesis/touchlogger_dirty/status_control/: Controllable.java  StatusController.java
app/src/main/java/org/leyfer/thesis/touchlogger_dirty/strategy/: CompositeWrapper.java  IStrategy.java  SimpleWrapper.java  StrategyManager.java  StrategyWrapper.java
app/src/main/java/org/leyfer/thesis/touchlogger_dirty/strategy/impl/: ManualInstallationStrategy.java  NormalInstallationStrategy.java  RootInstallationStrategy.java
app/src/main/java/org/leyfer/thesis/touchlogger_dirty/strategy/impl/dirty/: AppProcessDependencyInjectionStrategy.java  (+4 more)
app/src/main/java/org/leyfer/thesis/touchlogger_dirty/strategy/wrapper/: CompositeWrapper.java  SimpleWrapper.java  StrategyWrapper.java
app/src/main/java/org/leyfer/thesis/touchlogger_dirty/task/: SaveGesturesTask.java
app/src/main/java/org/leyfer/thesis/touchlogger_dirty/utils/: Config.java  DirectoryMonitor.java  FileListPoller.java  FileUtils.java  GestureConstructor.java  HeartBeatSender.java  JNIAPI.java  JniApi.java  NativeUtils.java  SPWrapper.java
app/src/main/java/org/leyfer/thesis/touchlogger_dirty/utils/crypto/: CryptoUtils.java  SymmetricEncryptionResult.java
app/src/main/java/org/leyfer/thesis/touchlogger_dirty/utils/file/: DirectoryMonitor.java  FileListPoller.java  FileUtils.java
app/src/main/java/org/leyfer/thesis/touchlogger_dirty/utils/gesture/: GestureConstructor.java
app/src/main/java/org/leyfer/thesis/touchlogger_dirty/utils/writer/: Command.java  ControlWriter.java  TCPSocketControlWriter.java
app/src/main/res/drawable-xhdpi/: .directory
app/src/main/res/layout/: activity_main.xml  dialog_manual_payload_installation.xml  indicator_view.xml  log_line_item.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/org/leyfer/thesis/touchlogger_dirty/: ExampleUnitTest.java
(+2 files in other folders)
